fix:swagger output not showing issue fixed
